css/styles.css
/*
=============== 
Fonts
===============
*/
@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");

/*
=============== 
Variables
===============
*/

:root {
  /* dark shades of primary color*/
  --clr-primary-1: 	#16697A;
  /* primary/main color */
  --clr-primary-5: 	#489FB5;
  /* lighter shades of primary color */
  --clr-primary-7:  #65B0C1;
  --clr-primary-9: #82C0CC;
  --clr-primary-10:#B8D4D8;
  /* darkest grey - used for headings */
  --clr-grey-1: rgb(16, 42, 66);
  --clr-grey-2: hsl(211, 39%, 23%);
  --clr-grey-3: hsl(209, 34%, 30%);
  --clr-grey-4: hsl(209, 28%, 39%);
  /* grey used for paragraphs */
  --clr-grey-5: hsl(210, 22%, 49%);
  --clr-grey-6: hsl(209, 23%, 60%);
  --clr-grey-7: hsl(211, 27%, 70%);
  --clr-grey-8: hsl(210, 31%, 80%);
  --clr-grey-9: hsl(212, 33%, 89%);
  --clr-grey-10: hsl(207, 36%, 95%);
  /* other colors  */
  --clr-light: #fdfdfc;
  --clr-dark: #101618;
  /* font families */
  --ff-primary: "Roboto", sans-serif;
  --ff-secondary: "Open Sans", sans-serif;
  /* transition */
  --transition: all 0.3s linear;
  /* spacing */
  --spacing: 0.25rem;
  /* radius */
  --radius: 0.65rem;
  /* box shadow */
  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  /* width */
  --max-width: 1170px;
}


/*
=============== 
Global Styles
===============
*/

*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@media screen and (max-width:400px){
  *{
    overflow-x: hidden;
  }
}

body {
  font-family: var(--ff-secondary);
  background: var(--clr-light);
  color: var(--clr-grey-1);
  line-height: 1.5;
  font-size: 0.875rem;
}
ul {
  list-style-type: none;
}
a {
  text-decoration: none;
  cursor: pointer;
}
img:not(.nav-logo) {
  width: 100%;
  display: block;
}

h1,
h2,
h3,
h4 {
  letter-spacing: var(--spacing);
  text-transform: capitalize;
  line-height: 1.25;
  margin-bottom: 0.75rem;
  font-family: var(--ff-primary);
}
h1 {
  font-size: 3rem;
}
h2 {
  font-size: 2rem;
}
h3 {
  font-size: 1.25rem;
}
h4 {
  font-size: 0.9rem;
}
p {
  margin-bottom: 1.25rem;
  color: var(--clr-grey-5);
}
@media screen and (min-width: 800px) {
  h1 {
    font-size: 4rem;
  }
  h2 {
    font-size: 2.5rem;
  }
  h3 {
    font-size: 1.75rem;
  }
  h4 {
    font-size: 1.1rem;
  }
  body {
    font-size: 1rem;
  }
  h1,
  h2,
  h3,
  h4 {
    line-height: 1;
  }
}

/*  global classes */

.btn {
  text-transform: uppercase;
  background: var(--clr-primary-5);
  color: var(--clr-primary-1);
  padding: 0.375rem 0.75rem;
  letter-spacing: var(--spacing);
  display: inline-block;
  font-weight: 700;
  transition: var(--transition);
  font-size: 0.9rem;
  border: 2px solid transparent;
  cursor: pointer;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  border-radius: var(--radius);
}
.btn:hover {
  color: var(--clr-primary-1);
  background: var(--clr-primary-7);
}
/* section */
.section {
  padding: 5rem 0;
}

.section-center {
  width: 90vw;
  margin: 0 auto;
  max-width: 1170px;
}
@media screen and (min-width: 992px) {
  .section-center {
    width: 95vw;
  }
}

.underline{
  width: 5rem;
  height: 0.25rem;
  margin-bottom: 1.2rem;
  background: var(--clr-primary-5);
  margin-left: auto;
  margin-right: auto;
}

.section-title{
  margin-bottom: 4rem;
  text-align: center;
}
/*
=============== 
Navbar
===============
*/

.nav{
  height: 5rem;
  padding: 1rem;
  display: grid;
  align-items: center;
  z-index: 10;
  transition: var(--transition);
}

.nav-center{
  width: 100%;
  max-width: 1170px;
  margin: 0 auto;
}

.nav-header{
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
}
.nav-logo{
  height: 3.5rem;
  border-radius: var(--radius);
  border: 3px solid rgba(16, 42, 66, 0.7);
}

.nav-btn{
  justify-self: end;
  font-size: 2rem;
  color: var(--clr-primary-5);
  outline: none;
  border: transparent;
  background: transparent;
}

.nav-links{
  display: none;
}

@media screen and (min-width:800px){
  nav{
    background: var(--clr-primary-10);
  }
  .nav-btn{
    display: none;
  }
  .nav-links{
    display: grid;
    grid-template-columns: repeat(4,1fr);
    justify-items: center;
    justify-self: end;
    -moz-column-gap: 2rem;
    column-gap: 2rem;
  }
  .nav-link{
    text-transform: capitalize;
    color: var(--clr-grey-1);
    font-weight: bold;
    letter-spacing: var(--spacing);
    transition: var(--transition);
  }
  .nav-link:hover{
    color: var(--clr-primary-5);
  }
  .nav-center{
    display: grid;
    grid-template-columns: auto 1fr;
    align-items: center;
  }
}
.navbar-fixed{
  position: fixed;
  top: 0;
  left: 0;
  box-shadow: var(--light-shadow);
  color: var(--clr-light);
  width: 100%;
  background: var(--clr-light);
}



/*
=============== 
Sidebar
===============
*/

.sidebar{
  background: var(--clr-grey-10);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: grid;
  place-items: center;
  transition: var(--transition);
  transform: translateX(-100%);
  z-index: 12;
}
.show-sidebar{
  transform: translateX(0);
}

.sidebar-links{
  text-align: center;
}
.sidebar-link{
  color: var(--clr-grey-5);
  display: inline-block;
  margin-bottom: 1.5rem;
  font-size: 2rem;
  text-transform: capitalize;
  transition: var(--transition);
  letter-spacing: var(--spacing);
}
.sidebar-link:hover{
  color: var(--clr-primary-5);
}

.sidebar-icons{
  display: grid;
  justify-items: center;
  grid-template-columns: repeat(5,1fr);
  margin: 2rem auto;
  /* text-align: center; */
  width: 20rem;
}
.sidebar-icon{
  color: var(--clr-grey-1);
  font-size: 1.8rem;
  transition: var(--transition);
}
.sidebar-icon:hover{
  color: var(--clr-primary-5);
}

.close-btn{
  position: absolute;
  top: 1rem;
  right: 1rem;
  background: transparent;
  color: rgb(214, 34, 34);
  font-size: 3rem;
  border: transparent;
  outline: none;
  transition: var(--transition);
}
.close-btn:hover{
  opacity: 0.8;
}
/* ... */

